# GatedLinearAttention2

./: .gitignore  Dockerfile  LICENSE  README.gdn2_100bt_baseline.md  README.md  README.original.md  SECURITY.md  cache.py  data.py  pretrain.py  pyproject.toml  requirements.txt
GatedLinearAttention2/: LICENSE  README.md  pyproject.toml  requirements.txt
GatedLinearAttention2/examples/: generate.py
GatedLinearAttention2/gated_linear_attention2/: __init__.py  config.py  generation.py  layers.py  model.py
docs/: current_eval_comparison_gdn2_mamba3.md  experiment_failure_detailed_analysis_2026-06-21.md  experiment_failure_easy_summary_2026-06-21.md  experiment_stop_summary_2026-06-21.md  gated_linear_attention2_beginner_explainer.md  gdn2_kla_single_candidate.md  gdn2_paper_evaluation_plan.md  run_gdn2_kla_10b_fair_hf_upload.md  what_exactly_is_gdn2_kla.md
eval/: gdn2_paper_baselines.json
lit_gpt/: __init__.py  config.py  gdn2.py  model.py  rmsnorm.py  speed_monitor.py  tokenizer.py  utils.py
scripts/: check_pretrain_readiness.py  lm_eval_gla2.py  merge_10b_eval_splits.py  prefetch_gdn2_eval_data.py  pretrain_fineweb_edu_100bt_gdn2.sh  pretrain_gdn2_kla_10bt.sh  ruler_eval_gla2.py  run_10b_eval_accelerated.sh  run_10b_lm_eval_retries.sh  run_gdn2_paper_eval.py  summarize_gdn2_paper_eval.py  tsz1024x4k_100B_swa_gdn2.sh  upload_hf_checkpoint.py  watch_and_run_gdn2_eval.sh
